2013-09-13  Filip Pizlo  <fpizlo@apple.com>

        DFG AI assumes that ToThis can never return non-object if it is passed an object, and operationToThis will get the wrong value of isStrictMode() if there's inlining
        https://bugs.webkit.org/show_bug.cgi?id=121330

        Reviewed by Mark Hahnenberg and Oliver Hunt.
        
        Also print whether a function is strict mode in debug dumps.

        * bytecode/CodeBlock.cpp:
        (JSC::CodeBlock::dumpAssumingJITType):
        * bytecode/CodeOrigin.cpp:
        (JSC::InlineCallFrame::dumpInContext):
        * dfg/DFGAbstractInterpreterInlines.h:
        (JSC::DFG::::executeEffects):
        * dfg/DFGOperations.cpp:
        * dfg/DFGOperations.h:
        * dfg/DFGSpeculativeJIT32_64.cpp:
        (JSC::DFG::SpeculativeJIT::compile):
        * dfg/DFGSpeculativeJIT64.cpp:
        (JSC::DFG::SpeculativeJIT::compile):

2013-09-10  Filip Pizlo  <fpizlo@apple.com>

        Introduce a SpecInt48 type and be more careful about what we mean by "Top"
        https://bugs.webkit.org/show_bug.cgi?id=121116

        Reviewed by Oliver Hunt.
        
        SpecInt48 will mean that we have something that would be a double if it was a JSValue,
        but it's profitable to represent it as something other than a double.
        
        SpecInt48AsDouble means that it has a value that could have been represented like
        SpecInt48, but we're making a heuristic decision not to do it.

        * bytecode/SpeculatedType.h:
        (JSC::isInt48Speculation):
        * dfg/DFGAbstractInterpreterInlines.h:
        (JSC::DFG::::executeEffects):
        (JSC::DFG::::clobberCapturedVars):
        * dfg/DFGAbstractValue.cpp:
        (JSC::DFG::AbstractValue::filter):
        * dfg/DFGAbstractValue.h:
        (JSC::DFG::AbstractValue::makeHeapTop):
        (JSC::DFG::AbstractValue::makeBytecodeTop):
        (JSC::DFG::AbstractValue::isHeapTop):
        (JSC::DFG::AbstractValue::heapTop):